--- a/BCBR Card.html
+++ b/BCBR Card.html
@@ -91,15 +91,15 @@
 <!--  ----------------------------------------------------------------------  -->
 <h2>BCBR CARD LTDA</h2>
 
-<label for="name">Nome do contato</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
+<label for="name">Nome do contato</label><input  id="name" maxlength="80" name="name" size="20" type="text" required/><br>
 
-<label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
+<label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" required/><br>
 
-<label for="phone">Telefone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+<label for="phone">Telefone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" required/><br>
 
-<label for="subject">Assunto</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
+<label for="subject">Assunto</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" required/><br>
 
-<label for="description">Descrição</label><textarea name="description"></textarea><br>
+<label for="description">Descrição</label><textarea name="description" required></textarea><br>
 
 <input type="submit" name="submit">
 
